[project]
name = "pytorch-vcte"
version = "0.1.0"
description = "Pytorch Image Classification Trainer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "rich>=14.0.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "wrapt>=1.17.2",
]

[project.optional-dependencies]
tjpeg = ["turbojpeg>=0.0.2"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
